--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "plugins": "node index.js "
+    "plugins": "node index.js ",
+    "prepare": "husky install"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "D": "^1.0.0",
     "chalk": "4.0.0",
     "commander": "^12.1.0",
     "cross-spawn": "^7.0.3",
@@ -21,11 +21,11 @@
     "@babel/eslint-parser": "^7.24.6",
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
-    "eslint": "9.x",
+    "eslint": "^9.4.0",
     "eslint-config-alloy": "^5.1.2",
     "eslint-webpack-plugin": "^4.2.0",
     "globals": "^15.3.0",
-    "husky": "^9.0.11",
+    "husky": "^8.0.0",
     "lint-staged": "^15.2.5",
     "prettier": "^3.3.0"
   },
