--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "globals": "^15.3.0",
     "husky": "^8.0.0",
     "lint-staged": "^15.2.5",
-    "prettier": "^3.3.0"
+    "prettier": "^3.3.1"
   },
   "husky": {
     "hooks": {
@@ -37,7 +37,8 @@
   "lint-staged": {
     "*.{js,ts,tsx,jsx}": [
       "eslint --fix",
-      "prettier --write"
+      "prettier --write",
+      "git add"
     ]
   }
 }
